Link to event log

--- a/static/app/views/retrospectives.html
+++ b/static/app/views/retrospectives.html
@@ -1,6 +1,7 @@
 <div class="hero-unit">
     <h1>Retrospectacular</h1>
     <a href="#/wordcloud">See the cloud</a>
+    <a href="#/events">Event log</a>
 
     <form name="retroAddForm" ng-submit="saveRetrospective()" novalidate>
         <div class="input-group">
